## GeoTag 4.5.1

### Bug Fixes

* Fix crash dragging an image onto the app icon

## GeoTag 4.5

### New Features

* center the map (more or less) on a track when the track is opened.
* Add preference to select track color for GPX tracks.
* change GPX file loaded notification to a sheet attached to the GeoTag main
  window.  Dual monitor users would sometimes find the pop-up previously used
  on the wrong monitor, i.e. no the monitor they were looking at.
* Verify a file can be written by exiftool. If not do not allow attempted
  updates that will fail during a save.   HEIC (iPhone) files are not writable.
* exiftool 11.32
* swift 5

### Bug Fixes

* fix error that caused a "could not save images" alert even when all image
  data had been saved.
* fix race condition when checking that all images had been saved
* handle GPX logs that include milliseconds in the location timestamp.
* Fix location interpolition issues related to time zones.
* Fix backup file naming. Examples:
  foo.bar.jpg would be backed up as foo.bar.jpg the first time.
  foo.bar.jpg would be backed up as foo-1.bar.jpg the second time.
  The backup file name should have been foo.bar-1.jpg

## GeoTag 4.4

### New Features

* GeoTag can now read GPS track logs in the format of a GPX file and display
  tracks on the map.  This can help locate places where pictures were taken.
  Use Open (⌘-O) to select GPX files.  GPX files can also be dragged onto the
  table.
* Image location can be updated from a GPS track logs.  Select the images to
  update and use ⌘T, Edit -> Locn from track, or crtl-click -> Locn from track.
  Note: this can be time consuming depending upon the number of images selected
  and the number of track log point loaded.
* Images can now be opened with GeoTag.  You can select one or more images in
  finder and then right click and select the "Open With" option.  GeoTag will
  be one of app choices.
* Double clicking on a row in the table will open a window to update the